fixed: last step in storm-dist/rpm/README should use mvn package not mvn deploy

--- a/storm-dist/rpm/README
+++ b/storm-dist/rpm/README
@@ -12,4 +12,4 @@ Build:
 
     $ mvn clean install source:jar javadoc:jar -DskipTests
     $ cd storm-dist/binary && mvn clean install -Pdist -Dgpg.skip
-    $ cd storm-dist/rpm    && mvn clean deploy -Prpm-dist -Dprovided.target.s3RepositoryPath=/path/to/s3repo
+    $ cd storm-dist/rpm    && mvn clean package -Prpm-dist -Dprovided.target.s3RepositoryPath=/path/to/s3repo
